Add slides for week 5 (final part)