@@ -5,11 +5,12 @@ import java.util.stream.Stream;
 
 public class FileFinder {
     public static Path find(String name) throws java.io.IOException {
-        try (Stream<Path> paths = Files.walk(Paths.get(""))) {
+        Path startPath = Path.of("").toAbsolutePath();
+        try (Stream<Path> paths = Files.walk(startPath)) {
             return paths
                     .filter(p -> p.getFileName().toString().equals(name))
                     .findFirst()
-                    .orElseThrow(() -> new RuntimeException("File not found"));
+                    .orElseThrow(() -> new RuntimeException(String.format("File '%s' not found in '%s'.", name, startPath)));
         }
     }
 }
